{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 13,
  "lineage": "af48f34b-8c7f-5159-0a95-26719318ba35",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-12T15:23:06.129-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kim-hyebin/global/firewalls/app-cluster-bastion-ssh",
            "log_config": [],
            "name": "app-cluster-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/global/networks/network-pet-clinic",
            "priority": 1000,
            "project": "kim-hyebin",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/global/firewalls/app-cluster-bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/kim-hyebin/global/networks/network-pet-clinic",
            "mtu": 0,
            "name": "network-pet-clinic",
            "project": "kim-hyebin",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/global/networks/network-pet-clinic"
          }
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/kim-hyebin/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/global/networks/network-pet-clinic",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "kim-hyebin",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/global/routes/egress-internet",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-12T15:23:28.041-07:00",
            "id": "projects/kim-hyebin/regions/europe-west1/routers/network-pet-clinic-router",
            "name": "network-pet-clinic-router",
            "network": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/global/networks/network-pet-clinic",
            "project": "kim-hyebin",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/regions/europe-west1/routers/network-pet-clinic-router"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "kim-hyebin/europe-west1/network-pet-clinic-router/network-pet-clinic--subnet-nat-router",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "network-pet-clinic--subnet-nat-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "kim-hyebin",
            "region": "europe-west1",
            "router": "network-pet-clinic-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "network-pet-clinic--subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_router.router",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-12T15:23:06.552-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/kim-hyebin/regions/europe-west1/subnetworks/network-pet-clinic--subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "network-pet-clinic--subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/global/networks/network-pet-clinic",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kim-hyebin",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kim-hyebin/regions/europe-west1/subnetworks/network-pet-clinic--subnet"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}